@@ -287,6 +287,7 @@ TIMEZONE_HOUR: T I M E Z O N E UNDERLINE H O U R;
 TIMEZONE_MINUTE: T I M E Z O N E UNDERLINE M I N U T E;
 TRIM : T R I M;
 TO : T O;
+TRUNCATE : T R U N C A T E;
 
 UNKNOWN : U N K N O W N;
 
