@@ -53,7 +53,8 @@ public enum NodeType {
   CREATE_TABLE(CreateTableNode.class),
   DROP_TABLE(DropTableNode.class),
   ALTER_TABLESPACE (AlterTablespaceNode.class),
-  ALTER_TABLE (AlterTableNode.class);
+  ALTER_TABLE (AlterTableNode.class),
+  TRUNCATE_TABLE (TruncateTableNode.class);
 
   private final Class<? extends LogicalNode> baseClass;
 
